package com.sep490.slms2026.entity;

import com.sep490.slms2026.enums.UtilityInvoiceStatus;
import com.sep490.slms2026.enums.UtilityType;
import jakarta.persistence.*;
import lombok.*;

import java.io.Serializable;
import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.UUID;

@Entity
@Table(name = "utility_invoices")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class UtilityInvoice implements Serializable {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "property_id", nullable = false)
    private Property property;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "room_id")
    private Room room;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "tenant_contract_id")
    private TenantContract tenantContract;

    @Enumerated(EnumType.STRING)
    @Column(name = "utility_type", nullable = false)
    private UtilityType utilityType;

    @Column(name = "billing_period", nullable = false)
    private String billingPeriod;

    @Column(name = "prev_reading", nullable = false, precision = 19, scale = 4)
    private BigDecimal prevReading;

    @Column(name = "new_reading", nullable = false, precision = 19, scale = 4)
    private BigDecimal newReading;

    @Column(name = "consumption", nullable = false, precision = 19, scale = 4)
    private BigDecimal consumption;

    @Column(name = "unit_price", nullable = false, precision = 19, scale = 8)
    private BigDecimal unitPrice;

    @Column(name = "amount", nullable = false, precision = 19, scale = 2)
    private BigDecimal amount;

    @Column(name = "meter_image_url")
    private String meterImageUrl;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    @Builder.Default
    private UtilityInvoiceStatus status = UtilityInvoiceStatus.SENT;

    @Column(name = "sent_at")
    private LocalDateTime sentAt;

    @Column(name = "created_by")
    private UUID createdBy;

    @Column(name = "created_at", nullable = false)
    private LocalDateTime createdAt;

    /** Lần đầu khách thuê mở hoá đơn trong app (GET chi tiết). */
    @Column(name = "tenant_viewed_at")
    private LocalDateTime tenantViewedAt;
}
